fix some sonarlint warnings